--- a/public/css/style.css
+++ b/public/css/style.css
@@ -302,11 +302,49 @@ a:hover {
 }
 
 .followers-sm-main {
-    padding: 9px;
+    padding: 6px 5px 0px 5px;
+    /*padding: 9px;*/
     font-family: 'Myriad Pro';
     font-size: 17px;
     color: black;
     font-weight: bold;
+}
+
+.img-effect {
+    opacity: 1;
+    transition: .5s ease;
+    /*backface-visibility: hidden;*/
+}
+
+.container-img:hover .img-effect {
+    
+    opacity:0.7;
+    border: 2px solid #b3afae;
+  }
+
+ .product-item a:hover {
+    text-decoration: none;
+    
+ }
+
+ .product-item a {
+    color: #b3afae;
+ }
+
+ .grow img{
+    transition: 1s ease;
+    }
+    
+    .grow img:hover{
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+    transition: 1s ease;
+    }
+
+.owl-two a:hover {
+    opacity: 0.7;
+    border: #B3AFAE;
 }
 
 .donar-decription-black{
@@ -1376,6 +1414,15 @@ div.content {
 }
 
 
+.container-new {
+    /*padding-right: 10px;
+    padding-left: 10px;*/
+    margin-right: auto;
+    margin-left: auto;
+}
+
+
+
 /******** RESPONSIVE ************/
 
 
@@ -1495,4 +1542,12 @@ div.content {
     .profile-container-comentario {padding: 0px 340px;}
 
     .my-profile-justify-margin {margin-left: 20px;}
+    .container-new {width: 1345px;}
+
+}
+
+@media only screen and (min-width: 2400px) {
+
+    .logo-header-normal { width: 4%; }
+
 }
